[tests] Findbugs: fix assertion format
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1646366 13f79535-47bb-0310-9956-ffa450edef68